# ironman-will

./: README.md
apps/agent/: README.md  env.example  main.py  pyproject.toml
apps/core/: README.md  STUDY_GUIDE.md  TESTING_DELIVERABLES.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  build.gradle.kts  env.example  pom.xml
apps/core/postman/: Iron_Will_Core_API.postman_collection.json  README.md
apps/core/src/main/java/com/ironwill/core/: CoreApplication.java
apps/core/src/main/resources/: application.yml
apps/core/src/test/resources/: application-test.yml
apps/web/: README.md  env.local.example  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/lockout/: page.tsx
apps/web/app/login/: page.tsx
docs/: agent_architecture.md  core_architecture.md  frontend_architecture.md  prd_summary.md
docs/prd/: agent_prd.md  core_platform_prd.md  ui_framework_prd.md
docs/prd_text/: agent.txt  core_platform.txt  ui_framework.txt
stitch_accountability_health_tracker/accountability_health_tracker_1/: code.html
stitch_accountability_health_tracker/accountability_health_tracker_2/: code.html
stitch_accountability_health_tracker/biohacker_analysis_1/: code.html
stitch_accountability_health_tracker/biohacker_analysis_2/: code.html
stitch_accountability_health_tracker/biohacker_analysis_3/: code.html
stitch_accountability_health_tracker/habit_contract_configuration/: code.html
stitch_accountability_health_tracker/iron_will_sign-in/: code.html
(+46 files in other folders)
