[tool.poetry]
name = "ironwill-agent"
version = "0.1.0"
description = "Iron Will Agent service (FastAPI + LangGraph)"
authors = ["Iron Will"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
langgraph = "^0.0.33"
langchain-google-vertexai = "^1.0.3"
google-genai = "^0.3.0"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pgvector = "^0.2.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

